Bug 359380 - Kjots plugin for kontact not available
Summary: Kjots plugin for kontact not available
Status: RESOLVED FIXED
Alias: None
Product: kjots
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Stephen Kelly
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-02-14 08:55 UTC by Christian Trippe
Modified: 2016-08-02 19:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian Trippe 2016-02-14 08:55:09 UTC
With the move of kjots to Frameworks 5 and out of the main kdepim I noticed that the kontact plugin for kjots is missing.

It would be great if this could be brought back. Not sure if this qualifies as a bug or is rather a wishlist. 

Otherwise thanks a lot for bringing kjots back in the KF5 world!

Reproducible: Always

Steps to Reproduce:
1. Have kontact and kjots build on KF5 installed
2. kjots can be started as stand alone application
3. kjots is not available from within kontact
Comment 1 Daniel Vrátil 2016-08-02 19:07:00 UTC
Git commit b79b87feb090eb50a2831552c27b67366792f6fc by Daniel Vrátil.
Committed on 02/08/2016 at 19:06.
Pushed by dvratil into branch 'master'.

Add Kontact plugin for KJots
FIXED-IN: 5.1.0

M  +2    -0    src/CMakeLists.txt
M  +2    -1    src/kjotspart.cpp
M  +6    -4    src/kjotspartui.rc
M  +3    -2    src/kjotsui.rc
A  +14   -0    src/kontact_plugin/CMakeLists.txt
A  +6    -0    src/kontact_plugin/kjots.setdlg
A  +102  -0    src/kontact_plugin/kjots_plugin.cpp     [License: GPL (v2+) (+Qt exception)]
A  +74   -0    src/kontact_plugin/kjots_plugin.h     [License: GPL (v2+) (+Qt exception)]
A  +18   -0    src/kontact_plugin/kjotsplugin.desktop

http://commits.kde.org/kjots/b79b87feb090eb50a2831552c27b67366792f6fc