Add Kontact plugin for KJots

BUG: 359380
FIXED-IN: 5.1.0